--- a/expt2.html
+++ b/expt2.html
@@ -23,13 +23,11 @@
     <!-- World News Section --> 
     <World id="world">World News</h2> 
     <p>Today’s top headline: Global leaders meet to discuss climate change initiatives.</p> 
-    <img src="https://m.media
-amazon.com/images/M/MV5BNGYwNDlmZDgtMDg1Yi00N2JmLTk0NzQtNWVkN2NiMTQxY2RlXkEyXk
- FqcGc@._V1_.jpg" alt="World News" width="560" height="315"> 
+    <img src="https://static.guim.co.uk/sys-images/Guardian/Pix/maps_and_graphs/2011/7/8/1310126352346/News-Of-The-World-front-p-007.jpg" alt="World News" width="560" height="315"> 
     <p><a href="https://www.bbc.com/news" target="_blank">Read more on BBC</a></p> 
     <!-- Sports News Section --> 
     <h2 id="sports">Sports Update</h2> 
-    <p>Highlights of yesterday’s football match with thrilling last-minute goals!</p> 
+    <p>cartoon</p> 
     <!-- Embedded YouTube Video --> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/aqz-KE-bpKQ" frameborder="0" 
 allowfullscreen></iframe> 
@@ -37,19 +35,19 @@ allowfullscreen></iframe>
  
     <!-- Entertainment Section --> 
     <h2 id="entertainment">Entertainment Buzz</h2> 
-    <p>New movie trailer released today. Fans are excited!</p> 
+    <p>batman vs superman movie</p> 
     <!-- Local Video --> 
     <video width="560" height="315" controls> 
-        <source src="sample-video.mp4" type="video/mp4"> 
+        <source src="Batman v Superman Dawn of Justice  EPIC Fight Scene!  ClipZone Heroes & Villains - ClipZone Heroes & Villains (1080p, h264).mp4" type="video/mp4"> 
         Your browser does not support the video tag.
         <hr> 
- 
+    </video>
     <!-- Podcast Section --> 
-    <h2 id="podcast">News Podcast</h2> 
+    <h2 id="whats next for humanity with AI">News Podcast</h2> 
     <p>Listen to today's top headlines:</p> 
     <!-- Audio --> 
     <audio controls> 
-        <source src="sample-audio.mp3" type="audio/mp3"> 
+        <source src="Cyber Crime Junkies-episode-What's Next for Humanity with Artificial Intelligence_.mp3" type="audio/mp3"> 
         Your browser does not support the audio element. 
     </audio> 
     <hr> 
